add api collection and change download route
add validation for download file request
